2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* README: Added.

	* NEWS: Added.

	* AUTHORS: Added.

	* gtk-checks.ac: Check the right package.

	* glib-checks.ac: Check the right package.

2004-09-12  Andy Wingo  <wingo@pobox.com>

	* defs-checks.ac: New file.

	* gnome/gw/Makefile.am (libgw_guile_gnome_libglade_la_SOURCES):
	Don't dist the g-wrap generated C file.

	* Makefile.am (EXTRA_DIST): Add the .ac files to the dist.

	* gnome/overrides/Makefile.am, gnome/overrides/libglade.defs: Add
	overrides to the libglade module.

	* gnome/Makefile.am: Fix for overrides, dist stuff.

	* gnome/gw/libglade-spec.scm (initialize): Use
	load-defs-with-overrides, new module locations.

2004-08-06  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/Makefile.am: Distribute and install glade.scm.

	* examples/test.scm: Use (gnome glade) instead of 
	(gnome gw libglade).

2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libglade-spec.scm (initializations-cg): Fix module
	stuff.

	* gnome/glade.scm (gnome): Fix name.

	* gnome/gw/libglade-spec.scm (initialize): Fix for depends-on!.

	* gnome/glade.scm: New file.

	* gnome/gw/glade-support.[ch]: Evaluate expressions in the (gnome
	gw libglade) module, scm_module_gobject isn't exported any more.

	* ChangeLog: Merged all ChangeLogs into this one, and elided
	entries that didn't deal with glade.

	* gtk-checks.ac: New file.

2004-05-22  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c: Evaluate expressions in the (gnome gw
	glade) module.

	* ChangeLog: Merged all ChangeLogs into this one, and elided
	entries that didn't deal with glade.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (handle_read_error): New function.
	(connect_many): Use scm_internal_catch with handle_read_error
	around scm_c_read_string.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (handle_read_error): New function.