@@ -30,6 +30,6 @@
 (define-module (gnome glade)
   #:use-module (gnome gtk)
   #:use-module (gnome gw libglade)
-  #:use-module (gnome gobject gw-utils))
+  #:use-module (gnome gw support modules))
 
 (re-export-modules (gnome gw libglade))
