@@ -19,7 +19,7 @@ libgw_guile_gnome_libglade_la_CFLAGS = $(GUILE_GLIB_CFLAGS) \
 	$(G_WRAP_CFLAGS)
 
 libgw_guile_gnome_libglade_la_LIBADD = $(LIBGLADE_LIBS) $(GUILE_LIBS) \
-	$(G_WRAP_LINK_ARGS) $(GUILE_GLIB_LIBS)
+	$(G_WRAP_LIBS) $(GUILE_GLIB_LIBS)
 
 libgw_guile_gnome_libglade_la_LDFLAGS = -module
 
