@@ -1,3 +1,14 @@
+2004-09-27  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/glade.scm: Avoid deprecated modules.
+
+	* examples/test.scm: Add license block.
+
+2004-09-19  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/Makefile.am (libgw_guile_gnome_libglade_la_LIBADD): Not
+	G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.
+
 2004-09-16  Andy Wingo  <wingo@pobox.com>
 
 	* Makefile.am (SUBDIRS): Dist fixes.
